--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,52 @@
+/* reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* ul ol */
+ul,
+ol {
+  list-style: none;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+}
+/* ------------------------------- */
+
+/* app */
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 /* header */
 header {
   background-color: #CAF0F8;
+}
+
+/* main */
+main {
+  min-height: 100%;
+  flex-grow: 1;
+  background-color: #CAF0F8;
+}
+
+/* ice-creams */
+.ice-creams .list-categories li button {
+  border-bottom: 2px solid transparent;
+}
+
+.ice-creams .list-categories li button:hover {
+  border-bottom-color: #3892C2;
+  transition: all 300ms linear;
+}
+
+.ice-creams .list-categories li button.active {
+  border-bottom-color: #3892C2;
+  transition: all 300ms linear;
 }
